@@ -721,20 +721,6 @@ name|hadoop
 operator|.
 name|mapred
 operator|.
-name|FileOutputFormat
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|mapred
-operator|.
 name|InputFormat
 import|;
 end_import
@@ -3128,31 +3114,6 @@ argument_list|)
 expr_stmt|;
 block|}
 name|String
-name|jobScratchDirStr
-init|=
-name|hiveScratchDir
-operator|+
-name|File
-operator|.
-name|separator
-operator|+
-name|Utilities
-operator|.
-name|randGen
-operator|.
-name|nextInt
-argument_list|()
-decl_stmt|;
-name|Path
-name|jobScratchDir
-init|=
-operator|new
-name|Path
-argument_list|(
-name|jobScratchDirStr
-argument_list|)
-decl_stmt|;
-name|String
 name|emptyScratchDirStr
 init|=
 literal|null
@@ -3259,13 +3220,14 @@ throw|;
 block|}
 block|}
 block|}
-name|FileOutputFormat
+name|ShimLoader
 operator|.
-name|setOutputPath
+name|getHadoopShims
+argument_list|()
+operator|.
+name|setNullOutputFormat
 argument_list|(
 name|job
-argument_list|,
-name|jobScratchDir
 argument_list|)
 expr_stmt|;
 name|job
@@ -4159,26 +4121,12 @@ argument_list|)
 expr_stmt|;
 try|try
 block|{
-name|FileSystem
-name|fs
-init|=
-name|jobScratchDir
+name|emptyScratchDir
 operator|.
 name|getFileSystem
 argument_list|(
 name|job
 argument_list|)
-decl_stmt|;
-name|fs
-operator|.
-name|delete
-argument_list|(
-name|jobScratchDir
-argument_list|,
-literal|true
-argument_list|)
-expr_stmt|;
-name|fs
 operator|.
 name|delete
 argument_list|(
