@@ -201,6 +201,22 @@ end_import
 
 begin_import
 import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|mapred
+operator|.
+name|lib
+operator|.
+name|NullOutputFormat
+import|;
+end_import
+
+begin_import
+import|import
 name|java
 operator|.
 name|io
@@ -551,6 +567,24 @@ name|toString
 argument_list|(
 name|val
 argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
+name|setNullOutputFormat
+parameter_list|(
+name|JobConf
+name|conf
+parameter_list|)
+block|{
+name|conf
+operator|.
+name|setOutputFormat
+argument_list|(
+name|NullOutputFormat
+operator|.
+name|class
 argument_list|)
 expr_stmt|;
 block|}
