@@ -309,6 +309,64 @@ name|CombineFileSplit
 import|;
 end_import
 
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|mapred
+operator|.
+name|OutputCommitter
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|mapred
+operator|.
+name|TaskAttemptContext
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|mapred
+operator|.
+name|JobContext
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|mapred
+operator|.
+name|lib
+operator|.
+name|NullOutputFormat
+import|;
+end_import
+
 begin_comment
 comment|/**  * Implemention of shims against Hadoop 0.20.0.  */
 end_comment
@@ -1519,6 +1577,106 @@ argument_list|(
 name|varName
 argument_list|,
 name|val
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+specifier|static
+class|class
+name|NullOutputCommitter
+extends|extends
+name|OutputCommitter
+block|{
+specifier|public
+name|void
+name|setupJob
+parameter_list|(
+name|JobContext
+name|jobContext
+parameter_list|)
+block|{ }
+specifier|public
+name|void
+name|cleanupJob
+parameter_list|(
+name|JobContext
+name|jobContext
+parameter_list|)
+block|{ }
+specifier|public
+name|void
+name|setupTask
+parameter_list|(
+name|TaskAttemptContext
+name|taskContext
+parameter_list|)
+block|{ }
+specifier|public
+name|boolean
+name|needsTaskCommit
+parameter_list|(
+name|TaskAttemptContext
+name|taskContext
+parameter_list|)
+block|{
+return|return
+literal|false
+return|;
+block|}
+specifier|public
+name|void
+name|commitTask
+parameter_list|(
+name|TaskAttemptContext
+name|taskContext
+parameter_list|)
+block|{ }
+specifier|public
+name|void
+name|abortTask
+parameter_list|(
+name|TaskAttemptContext
+name|taskContext
+parameter_list|)
+block|{ }
+block|}
+specifier|public
+name|void
+name|setNullOutputFormat
+parameter_list|(
+name|JobConf
+name|conf
+parameter_list|)
+block|{
+name|conf
+operator|.
+name|setOutputFormat
+argument_list|(
+name|NullOutputFormat
+operator|.
+name|class
+argument_list|)
+expr_stmt|;
+name|conf
+operator|.
+name|setOutputCommitter
+argument_list|(
+name|Hadoop20Shims
+operator|.
+name|NullOutputCommitter
+operator|.
+name|class
+argument_list|)
+expr_stmt|;
+comment|// option to bypass job setup and cleanup was introduced in hadoop-21 (MAPREDUCE-463)
+comment|// but can be backported. So we disable setup/cleanup in all versions>= 0.19
+name|conf
+operator|.
+name|setBoolean
+argument_list|(
+literal|"mapred.committer.job.setup.cleanup.needed"
+argument_list|,
+literal|false
 argument_list|)
 expr_stmt|;
 block|}
